<resources>
    <string name="app_name">SchoolERP</string>
    <string name="_91">+91-</string>
    <string name="get_otp">Get OTP</string>
    <string name="_1234567890">1234567890</string>
    <string name="enter_the_otp_sent_to">Enter the OTP sent</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="didn_t_recieve_the_otp">Didn\'t receive the OTP?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify">Verify</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create">Create</string>
    <string name="signup">SignUp</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="already_have_an_account">Already have an account.</string>
    <string name="name">Name</string>
    <string name="dob">DOB</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="we_will_send_you_one_time_password_on_this_mobile_number">We will send you one time password on this Mobile Number</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="mobile_number">Mobile number</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="open">Open Navigation</string>
    <string name="close">Close Navigation</string>
    <string name="title_activity_home_erp">Home_erp</string>
    <string name="menu_class">Class</string>
    <string name="attendance">Attendance</string>
    <string name="result">Result</string>
    <string name="transport">Transport</string>
    <string name="contact">Contact</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rout">Route</string>
    <string name="stop">Stop</string>
    <string name="notification">Notification</string>
    <string name="route">Route</string>
    <string name="track">Track</string>
    <dimen name="about_text_size">16sp</dimen>

    <dimen name="about_margin">5dp</dimen>
    <string name="about_content">
        Welcome to School ERP, your all-in-one solution for managing school
        operations efficiently and effectively. Our platform is designed to streamline administrative.
        tasks, enhance communication between stakeholders, and provide valuable insights to improve decision-making. \n
        Our Mission, is to empower educational institutions with innovative technology solutions that simplify management
        processes and enable them to focus on what matters most: educating and nurturing students.
        Student Management: Easily manage student admissions, registrations, attendance, and academic records.
        Staff Management: Efficiently handle teacher assignments, payroll, and performance evaluations.
        Parent Portal: Provide parents with access to their children academic progress, attendance records, and important announcements.
        Attendance Tracking: Track student and staff attendance with ease using our intuitive attendance management system.
        Academic Reporting: Generate detailed academic reports, including grades, progress reports, and transcripts.
        Communication Tools: Facilitate communication between administrators, teachers, students, and parents through in-app messaging, notifications, and announcements.
        Data Analytics: Gain valuable insights into school performance, student outcomes, and resource utilization through advanced analytics and reporting tools. \n
        Our Team, Our dedicated team of developers, designers, and educators is committed to delivering the best possible experience for our users. We continuously strive
        to enhance our platform with new features and improvements based on user feedback and industry best practices. \n
        Contact Us: Have questions or feedback? We had love to hear from you! Contact our support team at support@schoolerp.com or visit our website at www.schoolerp.com for more information.

       </string>
    <string name="introduction">Introduction</string>
    <string name="title_activity_xyz">xyz</string>
    <string name="title_activity_abc">abc</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>


</resources>