<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignupActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#FAC21F"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/signup_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/white"
                android:background="@color/white"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/name"
                android:padding="8dp"
                android:autofillHints="name"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/grey" />

            <EditText
                android:id="@+id/signup_dob"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:autofillHints="dob"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/baseline_date_range_24"
                android:drawablePadding="8dp"
                android:hint="@string/dob"
                android:inputType="number"
                android:onClick="sign_dob"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey" />

            <EditText
                android:id="@+id/signup_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/white"
                android:background="@color/white"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:padding="8dp"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                app:counterEnabled="true"
                app:counterMaxLength="16"/>

            <EditText
                android:id="@+id/signup_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/white"
                android:background="@color/white"
                android:drawableStart="@drawable/baseline_lock_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/confirm_password"
                android:padding="8dp"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                app:counterEnabled="true"
                app:counterMaxLength="16" />

            <Button
                android:id="@+id/signup_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:text="@string/signup"
                android:textColor="@color/white"
                android:backgroundTint="@color/black"
                android:textSize="18sp" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>

                <Button
                    android:id="@+id/login2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:text="@string/login"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/darkyellow"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>