<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/yellow"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="28sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/login_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/baseline_local_phone_24"
                android:background="@color/white"
                android:drawablePadding="8dp"
                android:hint="@string/mobile_number"
                android:textColorHint="@color/grey"
                android:textColor="@color/black"
                android:autofillHints="Mobile number"
                android:inputType="number"
                android:padding="8dp"
                app:boxBackgroundColor="@color/black"
                app:boxBackgroundMode="outline"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"/>

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/baseline_lock_24"
                android:background="@color/white"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:textColorHint="@color/grey"
                android:textColor="@color/black"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:padding="8dp"
                app:boxBackgroundColor="@color/black"
                app:boxBackgroundMode="outline"
                app:counterEnabled="true"
                app:counterMaxLength="16" />

            <Button
                android:id="@+id/forgotpassword"
                android:layout_width="176dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="130dp"
                android:background="@color/transparent"
                android:text="@string/forgot_password"
                android:textColor="@color/black"
                android:textSize="11sp" />

            <Button
                android:id="@+id/Login_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:text="@string/login"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>

                <Button
                    android:id="@+id/signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:text="@string/signup"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
