<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/yellow"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@drawable/baseline_account_circle_24" />

    <EditText
        android:id="@+id/nameView"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="@color/transparent"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:inputType="none"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:clickable="false"
        android:longClickable="false"
        android:cursorVisible="false"
        android:importantForAccessibility="no" />

    <EditText
        android:id="@+id/numberView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:paddingTop="4dp"
        android:text="@string/mobile_number"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:inputType="none"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:clickable="false"
        android:longClickable="false"
        android:cursorVisible="false"
        android:importantForAccessibility="no" />
</LinearLayout>
